crates/sncast/tests/e2e/account/snapshots/main__e2e__account__import__detect_deployed.snap
---
source: crates/sncast/tests/e2e/account/import.rs
expression: contents
---
{
  "version": 2,
  "accounts": {
    "alpha-sepolia": {
      "my_account_import": {
        "public_key": "0x788435d61046d3eec54d77d25bd194525f4fa26ebe6575536bc6f656656b74c",
        "address": "0x691a61b12a7105b1372cc377f135213c11e8400a546f6b0e7ea0296046690ce",
        "deployed": true,
        "class_hash": "0x5b4b537eaa2399e3aa99c4e2e0208ebd6c71bc1467938cd52c798c601e43564",
        "legacy": false,
        "type": "open_zeppelin",
        "signer": {
          "type": "private_key",
          "private_key": "0x5"
        }
      }
    }
  }
}
