crates/sncast/tests/e2e/account/snapshots/main__e2e__account__import__happy_case@ready.snap
---
source: crates/sncast/tests/e2e/account/import.rs
expression: contents
---
{
  "version": 2,
  "accounts": {
    "alpha-sepolia": {
      "my_account_import": {
        "public_key": "0x5f679dacd8278105bd3b84a15548fe84079068276b0e84d6cc093eb5430f063",
        "address": "0x123",
        "deployed": false,
        "class_hash": "0x4d07e40e93398ed3c76981e72dd1fd22557a78ce36c0515f679e27f0bb5bc5f",
        "legacy": true,
        "type": "ready",
        "signer": {
          "type": "private_key",
          "private_key": "0x456"
        }
      }
    }
  }
}
