crates/sncast/tests/e2e/account/snapshots/main__e2e__account__import__happy_case_add_profile@with_network_snfoundry.toml.snap
---
source: crates/sncast/tests/e2e/account/import.rs
expression: config_contents
---
[sncast.my_account_import]
network = "devnet"
account = "my_account_import"
accounts-file = "accounts.json"
