crates/sncast/tests/e2e/account/snapshots/main__e2e__account__import__happy_case_add_profile@with_url_accounts.json.snap
---
source: crates/sncast/tests/e2e/account/import.rs
expression: accounts_contents
---
{
  "version": 2,
  "accounts": {
    "alpha-sepolia": {
      "my_account_import": {
        "public_key": "0x759ca09377679ecd535a81e83039658bf40959283187c654c5416f439403cf5",
        "address": "0x1",
        "deployed": false,
        "class_hash": "0x4d07e40e93398ed3c76981e72dd1fd22557a78ce36c0515f679e27f0bb5bc5f",
        "legacy": true,
        "type": "open_zeppelin",
        "signer": {
          "type": "private_key",
          "private_key": "0x2"
        }
      }
    }
  }
}
