crates/sncast/tests/e2e/account/snapshots/main__e2e__account__import__import_with_class_hash_alias.snap
---
source: crates/sncast/tests/e2e/account/import.rs
expression: contents
---
{
  "version": 2,
  "accounts": {
    "alpha-sepolia": {
      "my_account_import": {
        "public_key": "0x5f679dacd8278105bd3b84a15548fe84079068276b0e84d6cc093eb5430f063",
        "address": "0x123",
        "deployed": false,
        "class_hash": "0x2a09379665a749e609b4a8459c86fe954566a6beeaddd0950e43f6c700ed321",
        "legacy": false,
        "type": "open_zeppelin",
        "signer": {
          "type": "private_key",
          "private_key": "0x456"
        }
      }
    }
  }
}
